--- a/public/admin-assets/css/custom.css
+++ b/public/admin-assets/css/custom.css
@@ -1,6 +1,8 @@
 @import url("font.css");
 @import url("padding-margin.css");
 @import url("width-height.css");
+@import url("display-spacing.css");
+
 
 .max-w-15 {
     max-width: 15.7%;
