--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -9223,7 +9223,7 @@ pre code {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .container, .container-sm, .container-md, .container-lg {
     max-width: 960px;
   }
@@ -9807,7 +9807,7 @@ pre code {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .col-lg {
     flex-basis: 0;
     flex-grow: 1;
@@ -11721,7 +11721,7 @@ input[type="button"].btn-block {
 }
 
 .fade {
-  transition: opacity 0.15s linear;
+  transition: opacity 0.15s cubic-bezier(0.46, -0.42, 1, 1);
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -11829,7 +11829,7 @@ input[type="button"].btn-block {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .dropdown-menu-lg-left {
     right: auto;
     left: 0;
@@ -13598,7 +13598,7 @@ input[type="button"].btn-block {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar-expand-lg {
     flex-flow: row nowrap;
     justify-content: flex-start;
@@ -14708,7 +14708,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .list-group-horizontal-lg {
     flex-direction: row;
   }
@@ -14987,13 +14987,16 @@ a.close.disabled {
   z-index: 1050;
   display: none;
   width: 100%;
+  height: 100%;
   overflow: hidden;
   outline: 0;
+  backdrop-filter: brightness(0.5);
 }
 
 .modal-dialog {
   position: relative;
   width: auto;
+  height: auto;
   margin: 10px;
   pointer-events: none;
 }
@@ -15039,7 +15042,7 @@ a.close.disabled {
 .modal-dialog-centered {
   display: flex;
   align-items: center;
-  min-height: calc(100% - 20px);
+  min-height: calc(100% - 15px);
 }
 
 .modal-dialog-centered::before {
@@ -15147,7 +15150,7 @@ a.close.disabled {
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 600px;
-    margin: 30px auto;
+    margin: auto;
   }
   .modal-dialog-scrollable {
     max-height: calc(100% - 60px);
@@ -15156,7 +15159,7 @@ a.close.disabled {
     max-height: calc(100vh - 60px);
   }
   .modal-dialog-centered {
-    min-height: calc(100% - 60px);
+    min-height: calc(100% - 55px);
   }
   .modal-dialog-centered::before {
     height: calc(100vh - 60px);
@@ -15167,10 +15170,10 @@ a.close.disabled {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .modal-dialog {
-    max-width: 1024px;
-    margin: 30px auto;
+    max-width: 90%;
+    margin: auto!important;
   }
   .modal-lg,
   .modal-xl {
@@ -15972,6 +15975,14 @@ button.bg-dark:focus,
   display: none !important;
 }
 
+.d-flex {
+  display: flex !important;
+}
+
+.d-grid {
+  display: grid !important;
+}
+
 .d-inline {
   display: inline !important;
 }
@@ -15995,6 +16006,7 @@ button.bg-dark:focus,
 .d-table-cell {
   display: table-cell !important;
 }
+
 
 .d-flex, .loader-demo-box, .data-icon-card-primary .background-icon, .data-icon-card-secondary .background-icon, .data-icon-card-success .background-icon, .data-icon-card-info .background-icon, .data-icon-card-warning .background-icon, .data-icon-card-danger .background-icon, .data-icon-card-light .background-icon, .data-icon-card-dark .background-icon, .list-wrapper ul li, .email-wrapper .mail-sidebar .menu-bar .profile-list-item a, .email-wrapper .mail-sidebar .menu-bar .profile-list-item a .user, .email-wrapper .mail-list-container .mail-list .details, .email-wrapper .message-body .attachments-sections ul li .thumb, .email-wrapper .message-body .attachments-sections ul li .details .buttons, .lightGallery .image-tile .demo-gallery-poster, .swal2-modal, .navbar .navbar-menu-wrapper .navbar-nav, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-profile, .navbar .navbar-menu-wrapper .navbar-nav .nav-item.dropdown .navbar-dropdown .dropdown-item, .navbar .navbar-menu-wrapper .navbar-nav.navbar-nav-right .nav-item {
   display: flex !important;
@@ -16064,7 +16076,7 @@ button.bg-dark:focus,
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .d-lg-none {
     display: none !important;
   }
@@ -16559,7 +16571,7 @@ button.bg-dark:focus,
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .flex-lg-row {
     flex-direction: row !important;
   }
@@ -16805,7 +16817,7 @@ button.bg-dark:focus,
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .float-lg-left {
     float: left !important;
   }
@@ -18120,7 +18132,7 @@ button.bg-dark:focus,
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .m-lg-0 {
     margin: 0 !important;
   }
@@ -18880,7 +18892,7 @@ button.bg-dark:focus,
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .text-lg-left {
     text-align: left !important;
   }
@@ -19095,10 +19107,10 @@ a.text-dark:hover, a.text-dark:focus {
     size: a3;
   }
   body {
-    min-width: 992px !important;
+    min-width: 768px !important;
   }
   .container {
-    min-width: 992px !important;
+    min-width: 768px !important;
   }
   .navbar {
     display: none;
@@ -19758,7 +19770,7 @@ code {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .grid-margin-lg-0 {
     margin-bottom: 0;
   }
@@ -19816,7 +19828,7 @@ code {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .border-right-lg {
     border-right: 1px solid #CED4DA;
   }
@@ -19834,7 +19846,7 @@ code {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .border-left-lg {
     border-left: 1px solid #CED4DA;
   }
@@ -23787,7 +23799,7 @@ dl li {
 
 /* Modals */
 .modal .modal-dialog {
-  margin-top: 100px;
+  margin: auto 40px;
 }
 
 .modal .modal-dialog .modal-content .modal-header {
@@ -28466,8 +28478,8 @@ div.tagsinput span.tag a {
 
 .main-panel {
   transition: width 0.25s cubic-bezier(0, 1.36, 0, 1.34), margin 0.25s cubic-bezier(0, 1.36, 0, 1.35);
-  width: calc(100% - 235px);
-  margin-left: 235px;
+  width: calc(100% - 55px);
+  margin-left: 55px;
   min-height: calc(100vh - 50px);
   display: -webkit-flex;
   display: flex;
@@ -28475,7 +28487,7 @@ div.tagsinput span.tag a {
   flex-direction: column;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 768px) {
   .main-panel {
     margin-left: 0;
     width: 100%;
@@ -28504,7 +28516,7 @@ div.tagsinput span.tag a {
   font-family: "Nunito", sans-serif;
   font-weight: 500;
   padding: 0;
-  width: 60px;
+  width: 55px;
   position: fixed;
   z-index: 50;
   box-shadow: 0px 2px 6px 0px #888888eb;
@@ -28655,8 +28667,8 @@ div.tagsinput span.tag a {
 }
 
 .sidebar .nav:not(.sub-menu) {
-  margin-left: 0.2rem;
-  margin-right: 0.2rem;
+  margin-left: 0rem;
+  margin-right: 0.5rem;
 }
 
 .sidebar .nav:not(.sub-menu) > .nav-item {
@@ -28796,11 +28808,11 @@ div.tagsinput span.tag a {
 }
 
 /* style for off-canvas menu*/
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 768px) {
   .sidebar-offcanvas {
     position: fixed;
     max-height: calc(100vh - 60px);
-    top: 60px;
+    top: 50px;
     bottom: 0;
     overflow: auto;
     right: -235px;
@@ -28810,7 +28822,7 @@ div.tagsinput span.tag a {
     box-shadow: -11px 4px 25px -5px #CDD1E1;
   }
   .sidebar-offcanvas.active {
-    right: 0;
+    right: -15px;
   }
 }
 
@@ -29156,7 +29168,7 @@ div.tagsinput span.tag a {
   display: none;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .navbar .navbar-menu-wrapper .navbar-nav.navbar-nav-right {
     margin-left: auto;
   }
@@ -29928,7 +29940,7 @@ div.tagsinput span.tag a {
 }
 
 /* Layouts */
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .sidebar-mini .navbar .navbar-brand-wrapper {
     width: 185px;
   }
@@ -30000,7 +30012,7 @@ div.tagsinput span.tag a {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .sidebar-icon-only .navbar .navbar-brand-wrapper {
     width: 60px;
   }
@@ -30162,7 +30174,7 @@ div.tagsinput span.tag a {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .sidebar-hidden .sidebar {
     transition: width 0.25s ease;
     -webkit-transition: width 0.25s ease;
@@ -30175,7 +30187,7 @@ div.tagsinput span.tag a {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .sidebar-absolute .page-body-wrapper {
     position: relative;
   }
@@ -30199,7 +30211,7 @@ div.tagsinput span.tag a {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .sidebar-fixed .sidebar {
     position: fixed;
     max-height: auto;
@@ -30223,7 +30235,7 @@ div.tagsinput span.tag a {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .boxed-layout .container-scroller {
     background: #c6c8ca;
     padding: 0 calc((100% - 1200px) / 2);
