--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -13816,6 +13816,7 @@ input[type="button"].btn-block {
   background-clip: border-box;
   border: 1px solid #e3e3e3;
   border-radius: 7px;
+  padding: 18px 25px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
@@ -15042,7 +15043,7 @@ a.close.disabled {
 .modal-dialog-centered {
   display: flex;
   align-items: center;
-  min-height: calc(100% - 15px);
+  min-height: calc(100% - 5px);
 }
 
 .modal-dialog-centered::before {
@@ -15058,9 +15059,9 @@ a.close.disabled {
   height: 100%;
 }
 
-.modal-dialog-centered.modal-dialog-scrollable .modal-content {
-  max-height: 570px;
-}
+/* .modal-dialog-centered.modal-dialog-scrollable .modal-content {
+  max-height: 680px;
+} */
 
 .modal-dialog-centered.modal-dialog-scrollable::before {
   content: none;
@@ -15159,7 +15160,7 @@ a.close.disabled {
     max-height: calc(100vh - 60px);
   }
   .modal-dialog-centered {
-    min-height: calc(100% - 55px);
+    min-height: calc(100% - 2px);
   }
   .modal-dialog-centered::before {
     height: calc(100vh - 60px);
@@ -16291,6 +16292,10 @@ button.bg-dark:focus,
 
 .justify-content-around {
   justify-content: space-around !important;
+}
+
+.justify-content-evenly {
+  justify-content: space-evenly !important;
 }
 
 .align-items-start {
@@ -23799,7 +23804,7 @@ dl li {
 
 /* Modals */
 .modal .modal-dialog {
-  margin: auto 40px;
+  margin: auto;
 }
 
 .modal .modal-dialog .modal-content .modal-header {
@@ -23820,6 +23825,11 @@ dl li {
   padding: 15px 31px;
 }
 
+@media (max-width: 480px) {
+  .modal .modal-dialog {
+    margin: 40px !important;
+  }
+}
 @media (max-width: 400px) {
   .modal .modal-dialog .modal-content .modal-footer {
     padding-left: .25rem;
@@ -24688,7 +24698,7 @@ dl li {
 }
 
 .nav-tabs .nav-link {
-  background: #f6f8fa;
+  background: #fdfeff;
   color: #000000;
   border-radius: 0;
   border: 1px solid #CED4DA;
@@ -24726,7 +24736,7 @@ dl li {
 }
 
 .nav-tabs.nav-tabs-vertical-custom {
-  background: #4B49AC;
+  background: #fffefe;
   border-radius: 4px;
 }
 
