--- a/public/admin-assets/css/custom.css
+++ b/public/admin-assets/css/custom.css
@@ -1316,3 +1316,7 @@ ul.com li .com_wrapper blockquote {
   margin: 0;
   border-left: 5px solid #eee
 }
+
+.bi-search::before {
+  font-size: 15px !important;
+}
