--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -8711,7 +8711,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
   line-height: 1.5;
   color: #1F1F1F;
@@ -8982,7 +8982,7 @@ legend {
   max-width: 100%;
   padding: 0;
   margin-bottom: .5rem;
-  font-size: 1.5rem;
+  font-size: .837rem;
   line-height: inherit;
   color: inherit;
   white-space: normal;
@@ -9036,27 +9036,27 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1, .h1 {
-  font-size: 2.5rem;
-}
-
-h2, .h2 {
   font-size: 2rem;
 }
 
-h3, .h3 {
+h2, .h2 {
   font-size: 1.75rem;
 }
 
-h4, .h4 {
+h3, .h3 {
   font-size: 1.5rem;
 }
 
-h5, .h5 {
+h4, .h4 {
   font-size: 1.25rem;
 }
 
-h6, .h6 {
+h5, .h5 {
   font-size: 1rem;
+}
+
+h6, .h6 {
+  font-size: 0.75rem;
 }
 
 .lead {
@@ -21610,7 +21610,7 @@ code {
 }
 
 .breadcrumb .breadcrumb-item {
-  font-size: 0.875rem;
+  font-size: 0.75rem;
 }
 
 .breadcrumb.breadcrumb-custom {
@@ -21619,7 +21619,7 @@ code {
 }
 
 .breadcrumb.breadcrumb-custom .breadcrumb-item {
-  font-size: 0.875rem;
+  font-size: 0.75rem;
   background: #dbe3e6;
   padding: 0.56rem 12px;
   color: #000;
@@ -28601,7 +28601,7 @@ div.tagsinput span.tag a {
 }
 
 .sidebar .nav .nav-item .nav-link i.menu-icon {
-  font-size: 1.44rem;
+  font-size: 1.2rem;
   line-height: 1.5;
   margin-right: 1rem;
   color: #a4aca7;
@@ -29192,7 +29192,7 @@ div.tagsinput span.tag a {
   height: 10px;
   border-radius: 100%;
   background-color: #83b99b;
-  top: 2px;
+  top: 10px;
   color: white;
 }
 
